# libemf2svg

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: alpine-build.yml  alpine-x86_64.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  macos-aarch64.yml  macos-arm64.yml  macos-build.yml  macos-x86_64.yml  msys-x86_64.yml  release.yml  ubuntu-aarch64.yml  ubuntu-arm64.yml  ubuntu-build.yml  ubuntu-x86_64.yml  windows-build.yml
cmake/: aarch64.cmake  arm64-darwin.cmake  arm64-osx.cmake
inc/: emf2svg_private.h
patches/argp/: CMakeLists.txt.patch
src/conv/: emf2svg.cpp
src/lib/: emf2svg.c  emf2svg_img_utils.c  emf2svg_rec_control.c  emf2svg_utils.c
tests/resources/: check_against_refs.sh
